[package]
name = "task"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
spin = "0.7"
log = "0.4"
os = {git = "https://github.com/Baozixu99/os.git"}
bitflags = "1.3"
num_enum = { version="0.5", default-features = false }